--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,53 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 45.32.192.94
-    port: 12079
-    cipher: auto
-    uuid: e63f477b-59d7-485e-9385-c38888b60cbf
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: server13.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 0c0db4fe-6133-4837-9f57-0ce75fb59692
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server13.beheshtbaneh.com
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.21.94.99
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.blueberrywindow.online
-  - &id004
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
+    server: for-irancell.outline-vpn.cloud
     port: 80
     cipher: auto
-    uuid: 1cb996c8-e5bf-40d2-9a3c-149b3b721c5f
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -60,14 +19,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: 45.144.2.113
-  - &id005
-    name: 🇺🇸_US_美国_4
+        host: my1.tooters.ir
+  - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 172.67.212.114
-    port: 8080
+    server: 104.20.231.30
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -75,9 +34,39 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.biz
-  - &id006
-    name: 🇺🇸_US_美国_5
+        host: my1.tooters.ir
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: 104.22.51.162
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id005
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: www.blueberrywindow.online
     port: 8080
@@ -91,7 +80,67 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.94.99
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
   - &id007
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: www.crispyrainbow.online
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.online
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: www.crispyrainbow.biz
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id009
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.67.212.114
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id010
     name: 🇺🇸_US_美国_6
     type: vmess
     server: 172.67.166.190
@@ -106,43 +155,128 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id008
+  - &id011
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: server3.beheshtbaneh.com
-    port: 8880
+    server: 104.19.23.194
+    port: 2052
     cipher: auto
-    uuid: e305fc57-6153-4650-8c52-9a36865a199d
+    uuid: ce1b46f7-fd89-4646-a968-206d65245aba
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/QXjZG5u4F2
       headers:
-        host: server3.beheshtbaneh.com
-  - &id009
+        host: us3AJ8biuQx.fzbqfrse.xyz
+  - &id012
     name: 🇺🇸_US_美国_8
     type: vmess
-    server: 104.21.82.183
-    port: 8880
+    server: 104.17.19.122
+    port: 2052
     cipher: auto
-    uuid: c5626b16-4c57-4d7e-8668-6b1ecda5c8b5
+    uuid: ce1b46f7-fd89-4646-a968-206d65245aba
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/QXjZG5u4F2
       headers:
-        host: server6.beheshtbaneh.com
-  - &id010
+        host: us3AJ8biuQx.fzbqfrse.xyz
+  - &id013
+    name: 🇨🇦_CA_加拿大_1
+    type: trojan
+    server: 23.227.38.46
+    port: 443
+    udp: true
+    password: 8c4c1021-3352-4c76-b4b6-26c38a137f92
+    sni: jus3.jsjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jsjc/us3
+      headers:
+        host: jus3.jsjc.sbs
+  - &id014
+    name: 🇨🇦_CA_加拿大_2
+    type: trojan
+    server: 23.227.38.30
+    port: 443
+    udp: true
+    password: 8c4c1021-3352-4c76-b4b6-26c38a137f92
+    sni: jus2.jsjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jsjc/us2
+      headers:
+        host: jus2.jsjc.sbs
+  - &id015
+    name: 🇨🇦_CA_加拿大_3
+    type: trojan
+    server: 23.227.38.18
+    port: 443
+    udp: true
+    password: 8c4c1021-3352-4c76-b4b6-26c38a137f92
+    sni: jus1.jsjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jsjc/us1
+      headers:
+        host: jus1.jsjc.sbs
+  - &id016
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: server4.beheshtbaneh.com
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: ce1b46f7-fd89-4646-a968-206d65245aba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/QXjZG5u4F2
+      headers:
+        host: us3AJ8biuQx.fzbqfrse.xyz
+  - &id017
+    name: 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+    type: trojan
+    server: 23.227.39.166
+    port: 443
+    udp: true
+    password: 8c4c1021-3352-4c76-b4b6-26c38a137f92
+    sni: jde1.jsjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jsjc/de1
+      headers:
+        host: jde1.jsjc.sbs
+  - &id018
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: trojan
+    server: 104.17.175.159
+    port: 443
+    udp: true
+    password: 8c4c1021-3352-4c76-b4b6-26c38a137f92
+    sni: jnl1.jsjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jsjc/nl1
+      headers:
+        host: jnl1.jsjc.sbs
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: server33.beheshtbaneh.com
     port: 8880
     cipher: auto
-    uuid: b7e04f2a-2a6a-4b74-a11e-06f658c36391
+    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -150,9 +284,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server4.beheshtbaneh.com
-  - &id011
-    name: 🇺🇸_US_美国_10
+        host: server33.beheshtbaneh.com
+  - &id020
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.18.126.211
+    port: 2052
+    cipher: auto
+    uuid: ce1b46f7-fd89-4646-a968-206d65245aba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/QXjZG5u4F2
+      headers:
+        host: us3AJ8biuQx.fzbqfrse.xyz
+  - &id021
+    name: 🇺🇸_US_美国_12
     type: vmess
     server: 104.21.23.176
     port: 8080
@@ -166,78 +315,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id012
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: server26.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server26.beheshtbaneh.com
-  - &id013
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 172.67.185.208
-    port: 2095
-    cipher: auto
-    uuid: 3c1cca21-1373-4707-a575-195e9da0fb71
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ebiii.fozool76.lol
-  - &id014
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: www.crispyrainbow.biz
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.biz
-  - &id015
+  - &id022
     name: 🇺🇸_US_美国_13
-    type: vmess
-    server: www.crispyrainbow.online
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.online
-  - &id016
-    name: 🇺🇸_US_美国_14
-    type: trojan
-    server: 104.160.18.251
-    port: 443
-    udp: true
-    password: 7522e2c27233459aab8d0f1d715828d0
-    sni: www.gpt123.one
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_15
     type: vmess
     server: www.darkroom.lol
     port: 8080
@@ -251,13 +330,28 @@ proxies:
       path: /
       headers:
         host: www.darkroom.lol
-  - &id018
-    name: 🇺🇸_US_美国_16
+  - &id023
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
     type: vmess
-    server: server9.beheshtbaneh.com
+    server: www.greendam.site
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: my1.tooters.ir
+  - &id024
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: server31.beheshtbaneh.com
     port: 8880
     cipher: auto
-    uuid: 62575747-37b4-4bf8-9ac5-95d214003be1
+    uuid: 4154143c-bbba-47a4-9f79-c2ed087cbcc9
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -265,51 +359,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server9.beheshtbaneh.com
-  - &id019
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.232.170.22
-    port: 30128
-    cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 104.18.202.232
-    port: 2083
-    cipher: auto
-    uuid: 0d3f0cf6-e010-4138-8133-140c07e5eafb
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: joooin.golestan-vpn.link
-    network: ws
-    ws-opts:
-      path: /@golestan_vpn
-      headers:
-        host: joooin.golestan-vpn.link
-  - &id021
-    name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
-    type: vmess
-    server: 185.214.103.249
-    port: 8002
-    cipher: auto
-    uuid: e096b14e-b746-3dda-bc95-a435b4b2aceb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-1.cn-db.top
-  - &id022
-    name: 🇺🇸_US_美国_17
+        host: server31.beheshtbaneh.com
+  - &id025
+    name: 🇺🇸_US_美国_15
     type: vmess
     server: server32.beheshtbaneh.com
     port: 8880
@@ -323,6 +375,74 @@ proxies:
       path: /
       headers:
         host: server32.beheshtbaneh.com
+  - &id026
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 183.232.170.22
+    port: 30128
+    cipher: auto
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: server20.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 7ee41eb4-0594-4e2d-92a7-5dd3ee513692
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server20.beheshtbaneh.com
+  - &id028
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 104.21.82.183
+    port: 8880
+    cipher: auto
+    uuid: 8420ee38-4cf6-4d79-a9ec-2731207cf83a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server2.beheshtbaneh.com
+  - &id029
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: server26.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server26.beheshtbaneh.com
+  - &id030
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 54.73.26.219
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
 proxy-groups:
   - name: PROXY
     type: select
@@ -371,6 +491,14 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -398,6 +526,14 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: SELECT
     type: select
     proxies:
@@ -423,6 +559,14 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
